# openstack-health

./: .bowerrc  .coveragerc  .eslintignore  .eslintrc  .gitignore  .gitreview  .jshintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  bindep.txt  bower.json  export_static.py  gulpfile.js  karma.conf.js  manage.py  package.json  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
app/: .eslintrc  index.html
app/data/: home_sample.json  project_sample.json
app/js/: constants.js  main.js  on_config.js  on_run.js  templates.js
app/styles/: _breadcrumbs.scss  _footer.scss  _header.scss  _nprogress.scss  _openstack-health.scss  _sb-admin-2.scss  main.scss
app/views/: accordion-group-run.html  context-legend.html  crumb-menu.html  crumb-period-popover.html  fresh-check.html  grouped-runs.html  home.html  job.html  loading-indicator.html  menu.html  project.html  sunburst.html  test.html  tests-detail.html  tests.html  timeline.html
config/: build_test_images.sh  github_source.yaml  messagedumper_github_subscription.yaml  run_from_git.sh
config/dev/: api.yaml  frontend.yaml
config/dev-test/: api.yaml  frontend.yaml
config/once/: database-secrets.yaml  ingress-rules.yaml  openstack-subunit2sql-serviceentry.yaml
config/templates/: config.sh  githubsecret.yaml  githubsource_ingress.yaml
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  subunit2sql.rst  usage.rst
etc/: config.json  openstack-health-api.conf
etc/reports/: config.json
gulp/: LICENSE  config.js
gulp/tasks/: browserSync.js  browserify.js  data.js  deploy.js  dev-resources.js  development.js  e2e.js  gzip.js  images.js  production.js  protractor.js  reports.js  server.js  styles.js  test.js  unit.js  vendor-js.js  views.js  watch.js
gulp/util/: bundleLogger.js  handleErrors.js  scriptFilter.js
images/api/: .dockerignore  Dockerfile  health-api.conf  health-uwsgi-api.ini  openstack-health.conf  run.sh  supervisord.conf
images/frontend/: .dockerignore  Dockerfile  run.sh
openstack_health/: api.py  base_aggregator.py  distributed_dbm.py  run_aggregator.py  test_run_aggregator.py
openstack_health/tests/: base.py  test_api.py  test_counter.py  test_run_aggregator.py  test_status.py  test_test_run_aggregator.py
pipelines/dev/: 001-namespace.yaml  002-serviceaccount.yaml
pipelines/pipelines/: test-dev-api.yaml  test-dev-frontend.yaml
pipelines/taskruns/: run-task-kaniko-cache-base-images.yaml
pipelines/tasks/: task-kaniko-cache.yaml  task-source-to-image.yaml  task-tox.yaml
releasenotes/notes/: drop-py-2-7-0bd1c0e65d009181.yaml
stackviz/: __init__.py  export.py  global_template_injector.py  settings.py  urls.py  wsgi.py
stackviz/parser/: devstack_parser.py  log_node.py  tempest_subunit.py
stackviz/static/: logs.json
stackviz/templates/: index.html  menu.html  template.html
test/: karma.conf.js  protractor.conf.js
(+132 files in other folders)
